# libz32

./: CMakeLists.txt  README.md  package.json
include/: z32.h
src/: z32.c
test/: CMakeLists.txt  decode-invalid.c  decode-length.c  decode.c  encode-length.c  encode.c
